# qemu

./: meson.build
accel/tcg/: cpu-exec.c
hw/net/: igb_core.c
intel-pt/: Cargo.toml  arguments.c  arguments.h  bindings.h  build.rs  chain-count.c  chain-count.h  cleanup.c  cleanup.h  config.c  config.h  intel-pt.h  jmx-jump.c  jmx-jump.h  mapping.c  mapping.h  meson.build  pt-write.c  pt-write.h  recording-internal.h  recording.c  recording.h  recording_internal.h
intel-pt/csrc/: chain-count.c  chain-count.h  jmx-jump.c  jmx-jump.h  meson.build
intel-pt/parser/: buffer.c  buffer.h  mapping.c  mapping.h  meson.build  output-writer.c  output-writer.h  parser.c  parser.h  pt-parser-oppcode.h  pt-parser-types.h  pt-parser.c  pt-parser.h  types.h
intel-pt/src/: ffi.rs  lib.rs  mode.rs  state.rs
intel-pt/src/hardware/: decoder.rs  mod.rs  ordered_queue.rs  parser.rs  reader.rs  writer.rs
intel-pt/src/hardware/parser/: mod.rs
intel-pt/src/hardware/writer/: mod.rs
intel-pt/src/intel_pt/: decoder.rs  mod.rs  notify.rs  parser.rs  reader.rs  ring_buffer.rs  thread_handle.rs  writer.rs
linux-user/: exit.c  main.c
linux-user/aarch64/: cpu_loop.c
scribe/: Cargo.toml  bindings.h  build.rs  cargo.sh  get_objects.sh  meson.build
scribe/benches/: data.pt  sync.rs
scribe/csrc/: chain-count.c  chain-count.h  jmx-jump.c  jmx-jump.h  meson.build
scribe/src/: ffi.rs  lib.rs  state.rs
scribe/src/.cargo/: config  config.toml
scribe/src/hardware/: decoder.rs  mod.rs  ordered_queue.rs  parser.rs  reader.rs  ring_buffer.rs  writer.rs
scribe/src/hardware/decoder/: mod.rs  sync.rs  tip.rs
tcg/: tcg.c
tcg/i386/: tcg-target.c.inc
trace/: control.h  guest_pc.c  guest_pc.h  meson.build
