[package]
name = "intel_pt"
version = "0.1.0"
edition = "2021"

[lib]
name = "intel_pt"
crate-type = ["staticlib"]

[profile.release]
codegen-units = 1
lto = "fat"
debug = true

[dependencies]
memmap2 = "0.9.0"
parking_lot = "0.12.1"
twox-hash = "1.6.3"
page_size = "0.6.0"
perf-event-open-sys2 = "5.0.3"
libipt = { git = "https://github.com/sum-catnip/libipt-rs" }
pretty_env_logger = "0.5.0"
log = { version = "0.4.20", features = ["release_max_level_off"] }
bbqueue = "0.5.1"
color-eyre = "0.6.2"

[build-dependencies]
cbindgen = "0.26.0"
